--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 -->
 <html>
 	<head>
-		<title>INPUT-WEB</title>
-		<meta charset="utf-8" /
+<title><font color="#FF3361 "> iMOC</font> </title>		<meta charset="utf-8" /
 		      >
 		   <meta name="google-site-verification" content="+nxGUDJ4QpAZ5l9Bsjdi102tLVC21AIh5d1Nl23908vVuFHs34="/>
 		      <meta name="theme-color" content="#093E6F">
